--- a/.gitignore
+++ b/.gitignore
@@ -15,59 +15,59 @@ build/
 *.log
 
 # Android
-*.iml
-*.class
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
-.DS_Store
-/build
-/captures
-GeneratedPluginRegistrant.java
+android/*.iml
+android/*.class
+android/.gradle
+android/local.properties
+android/.idea/workspace.xml
+android/.idea/libraries
+android/.DS_Store
+android/build
+android/captures
+android/GeneratedPluginRegistrant.java
 
 # iOS
-.idea/
-.vagrant/
-.sconsign.dblite
-.svn/
+ios/.idea/
+ios/.vagrant/
+ios/.sconsign.dblite
+ios/.svn/
 
-.DS_Store
-*.swp
-profile
+ios/.DS_Store
+ios/*.swp
+ios/profile
 
-DerivedData/
-build/
-GeneratedPluginRegistrant.h
-GeneratedPluginRegistrant.m
+ios/DerivedData/
+ios/build/
+ios/GeneratedPluginRegistrant.h
+ios/GeneratedPluginRegistrant.m
 
-.generated/
+ios/.generated/
 
-*.pbxuser
-*.mode1v3
-*.mode2v3
-*.perspectivev3
+ios/*.pbxuser
+ios/*.mode1v3
+ios/*.mode2v3
+ios/*.perspectivev3
 
-!default.pbxuser
-!default.mode1v3
-!default.mode2v3
-!default.perspectivev3
+ios/!default.pbxuser
+ios/!default.mode1v3
+ios/!default.mode2v3
+ios/!default.perspectivev3
 
-xcuserdata
+ios/xcuserdata
 
-*.moved-aside
+ios/*.moved-aside
 
-*.pyc
-*sync/
-Icon?
-.tags*
+ios/*.pyc
+ios/*sync/
+ios/Icon?
+ios/.tags*
 
-/Flutter/app.flx
-/Flutter/app.zip
-/Flutter/flutter_assets/
-/Flutter/App.framework
-/Flutter/Flutter.framework
-/Flutter/Generated.xcconfig
-/ServiceDefinitions.json
+ios/Flutter/app.flx
+ios/Flutter/app.zip
+ios/Flutter/flutter_assets/
+ios/Flutter/App.framework
+ios/Flutter/Flutter.framework
+ios/Flutter/Generated.xcconfig
+ios/ServiceDefinitions.json
 
-Pods/
+ios/Pods/
