--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: life_school
+name: lifeschool
 description: Learn from the very best in intimate masterminds
 
 # The following defines the version and build number for your application.
@@ -21,6 +21,22 @@ dependencies:
     sdk: flutter
 
   carousel_slider: ^1.3.0
+  font_awesome_flutter: ^8.5.0
+  shared_preferences: ^0.5.3
+  firebase_auth: ^0.14.0
+  firebase_database: ^3.0.7
+  cloud_firestore: ^0.12.9
+  google_sign_in: ^4.0.7
+  firebase_storage: ^3.0.6
+  flutter_facebook_login: 3.0.0
+  image_picker: ^0.6.1
+  cached_network_image: ^1.1.1
+  intl: ^0.16.0
+  fluttertoast: ^3.1.3
+  equatable: ^0.6.1
+  rxdart: ^0.22.3
+  built_value: ^6.7.1
+  email_validator: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -29,6 +45,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner:
+  built_value_generator:
 
 
 # For information on the generic Dart part of this file, see the
