--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,11 +28,10 @@ dependencies:
   cloud_firestore: ^0.12.9
   google_sign_in: ^4.0.7
   firebase_storage: ^3.0.6
-  flutter_facebook_login: 3.0.0
+  flutter_facebook_login: ^3.0.0
   image_picker: ^0.6.1
   cached_network_image: ^1.1.1
   intl: ^0.16.0
-  fluttertoast: ^3.1.3
   rxdart: ^0.22.3
   built_value: ^6.7.1
   email_validator: ^1.0.0
